# queue-to-view

./: .env.example  .gitignore  docker-compose.yml  readme.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  readme.md  scrapy.cfg  setup.cfg
backend/cli/: __init__.py  __main__.py  constants.py
backend/cli/commands/: __init__.py  createuser.py  movieimport.py
backend/cli/utils/: __init__.py  console.py
backend/parser/: constants.py  items.py  middlewares.py  pipelines.py  result.json  settings.py  utils.py
backend/parser/result/: movies.json
backend/parser/spiders/: imdb.py
backend/src/: main.py
backend/src/api/: endpoints.py
backend/src/api/dependencies/: repository.py  session.py  user.py
backend/src/api/routes/: __init__.py  authentication.py  country.py  genre.py  main.py  movie.py  test.py  user.py  watchlist.py
backend/src/api/shortcuts/: __init__.py  country.py  genre.py  movie.py  user.py
backend/src/config/: authentication.py  constants.py  events.py  manager.py  settings.py
backend/src/models/db/: __init__.py  country.py  genre.py  movie.py  movie_genre.py  test.py  user.py  watched_movie.py  watchlist.py
backend/src/models/schemas/: base.py  country.py  exceptions.py  genre.py  movie.py  test.py  user.py
backend/src/repository/: base.py  database.py  events.py  table.py  user.py
backend/src/repository/crud/: __init__.py  base.py  country.py  genre.py  movie.py  test.py  user.py  watchlist.py
backend/src/repository/migrations/: env.py
backend/src/services/authentication/: __init__.py  core.py  strategy.py
backend/src/utils/: validators.py
backend/src/utils/docs/: __init__.py  details.py  openapi.py
backend/src/utils/exceptions/: database.py  handlers.py
backend/src/utils/messages/: exceptions.py
backend/src/utils/tools/: __init__.py  slugify.py  static.py
(+83 files in other folders)
