[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
(
    /tests
  | /venv
  | /alembic
)/
'''

[tool.poetry]
name = "qts-backend"
version = "0.1.0"
description = "Queue to View backend services."
authors = [
    "Grigory Yolkin <gyolkin380@yandex.ru>",
    "Dmitriy Timofeev <d.i.timofeev@mail.ru>"
]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
asyncpg = "^0.28.0"
alembic = "^1.12.0"
loguru = "^0.7.2"
pydantic-settings = "^2.0.3"
python-dotenv = "^1.0.0"
python-slugify = "^8.0.1"
aiofiles = "^23.2.1"
sqlalchemy = "2.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
